# exportify-converter

./: LICENSE.md  README.md  README.org  pyproject.toml
docs/: design-intentions.org  design.org  libraries-utilised.org  libraries-utilised.typ  original-converter-functionality.org
exportify-converter/: converter.py
exportify_converter/: settings.json
